refactor: remove code duplication by calling subscription/[subscriptionId]/* route handlers from inside manage/keys/* route handlers
