# apps/backoffice/openapi.yaml
@@ -1132,7 +1132,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ManageKeyCIDRs'
+                $ref: '#/components/schemas/SubscriptionCIDRs'
         '401':
           description: Unauthorized
         '403':
@@ -1157,7 +1157,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ManageKeyCIDRs'
+              $ref: '#/components/schemas/SubscriptionCIDRs'
         required: true
       responses:
         '200':
@@ -1165,7 +1165,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ManageKeyCIDRs'
+                $ref: '#/components/schemas/SubscriptionCIDRs'
         '401':
           description: Unauthorized
         '403':
@@ -1647,19 +1647,6 @@ components:
       $ref: '../../packages/io-services-cms-models/openapi/services-cms-schemas.yaml#/ReviewRequest'
     Timestamp:
       $ref: 'https://raw.githubusercontent.com/pagopa/io-services-cms/master/packages/io-services-cms-models/openapi/commons-schemas.yaml#/Timestamp'
-    ManageKeyCIDRs:
-      type: object
-      description: Service basic data
-      properties:
-        cidrs:
-          description: >-
-            List of Allowed source IPs or CIDRs associated to the Manage key.
-            When empty, every IP address it's authorized for this Manage Keys.
-          type: array
-          items:
-            $ref: 'https://raw.githubusercontent.com/pagopa/io-services-cms/master/packages/io-services-cms-models/openapi/commons-schemas.yaml#/Cidr'
-      required:
-        - cidrs
     SubscriptionCIDRs:
       type: object
       description: Subscription authorized CIDRs
